[tool.poetry]
name = "metricity"
version = "2.3.2"
description = "Advanced metric collection for the Python Discord server"
authors = ["Joe Banks <joseph@josephbanks.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.11.*"

# See https://bot-core.pythondiscord.com/ for docs.
pydis-core = "10.4.0"

alembic = "1.13.0"
coloredlogs = "15.0.1"
deepmerge = "1.1.0"
sqlalchemy = { extras = ["asyncio"], version = "2.0.23" }
python-dotenv = "1.0.0"
asyncpg = "0.29.0"

[tool.poetry.dev-dependencies]
pre-commit = "3.5.0"
ruff = "0.1.8"

[tool.poetry.scripts]
start = "metricity.__main__:start"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN101",
    "C901",
    "CPY001",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D416",
    "EM",
    "PLR0912", "PLR6301",
    "TRY003",
]
line-length = 120
unsafe-fixes = true
preview = true

[tool.ruff.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

[tool.ruff.per-file-ignores]
"metricity/models.py" = ["A003"]
"alembic/*" = ["INP001"]
