[tool.poetry]
name = "metricity"
version = "2.8.0"
description = "Advanced metric collection for the Python Discord server"
authors = ["Joe Banks <joseph@josephbanks.me>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"

# See https://bot-core.pythondiscord.com/ for docs.
pydis-core = "11.3.1"

alembic = "1.13.2"
coloredlogs = "15.0.1"
deepmerge = "1.1.1"
sqlalchemy = { extras = ["asyncio"], version = "2.0.34" }
python-dotenv = "1.0.1"
asyncpg = "0.29.0"

[tool.poetry.dev-dependencies]
pre-commit = "3.8.0"
ruff = "0.6.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.ruff]
target-version = "py311"
extend-exclude = [".cache"]
line-length = 120
unsafe-fixes = true
preview = false
output-format = "concise"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "ANN002", "ANN003", "ANN101",
    "C901",
    "CPY001",
    "D100", "D104", "D105", "D107", "D203", "D212", "D214", "D215", "D416",
    "EM",
    "PLR0912", "PLR6301",
    "TRY003",
]

[tool.ruff.lint.isort]
order-by-type = false
case-sensitive = true
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"metricity/models.py" = ["A003"]
"alembic/*" = ["INP001"]
